<resources>
    <string name="app_name">Events</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="Google_maps_api_key">AIzaSyDJgHdE0Vh-gvelQDbcnBcXK0F47J3EdWs</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_create_event">Create Event</string>
    <string name="search_hint">Search Event</string>
    <string name="app_label">Search</string>


    <string name="Change_Username">Change Username</string>
    <string name="Change_Password">Change Password</string>
    <string name="Logout">Logout</string>
    <string name="Enable_notifications">Enable Notifications</string>
    <string name="About">About</string>

    <!--Dialog names-->
    <string name="dialog_select_photo">SelectPhoto</string>

    <!--Database nodes-->
    <string name="node_users">users</string>
    <string name="node_posts">posts</string>

    <string-array name="category_types">
        <item>Select Event Category</item>
        <item>Business</item>
        <item>Sports</item>
        <item>Religion</item>
        <item>Education</item>
        <item>Lifestyle</item>
        <item>Entertainment</item>
        <item>Others</item>
    </string-array>

    <string-array name="event_menu">
        <item>All Events</item>
        <item>My Events</item>
        <item>Interested</item>
        <item>Going</item>
        <item>Subscription</item>
    </string-array>
</resources>
